www/logng_style.css
#syslogContainer {
	width: 68em;
	height: 45em;
	resize: both;
	overflow: auto;
	font-family: 'Courier New', Courier, mono;
	font-size: 11px;
}
#syslogTable {
	table-layout: fixed;
	min-height: 300px;
	border-collapse: collapse;
}
#syslogTable th {
	margin: 0px;
	position: sticky;
	top: 0;
	background: #2F3A3E;
	text-align: left;
	padding-left: 5px;
}
#syslogTable td {
	padding-left: 2px;
	padding-right: 2px;
	padding-top: 0px;
	padding-bottom: 0px;
	margin: 0px;
	border: 1px solid gray;
	overflow: hidden;
	white-space: nowrap;
}

#syslogTable col:first-of-type {
	border-left: 2px solid #2F3A3E;
}
#syslogTable td:last-of-type, #syslogTable th:last-of-type, #syslogTable td:first-of-type {
	border-right: 2px solid #2F3A3E;
}
#syslogTable tr:last-of-type {
	border-bottom: 2px solid #2F3A3E;
}

/* Hide raw message, or everything else */
#syslogTable th:first-of-type,
#syslogTable tr.lvl_unknown td:first-of-type,
#syslogTable tr.lvl_emerg td:first-of-type,
#syslogTable tr.lvl_alert td:first-of-type,
#syslogTable tr.lvl_crit td:first-of-type,
#syslogTable tr.lvl_err td:first-of-type,
#syslogTable tr.lvl_warning td:first-of-type,
#syslogTable tr.lvl_notice td:first-of-type,
#syslogTable tr.lvl_info td:first-of-type,
#syslogTable tr.lvl_debug td:first-of-type,
#syslogTable tr:not(.lvl_unknown):not(.lvl_emerg):not(.lvl_alert):not(.lvl_crit):not(.lvl_err):not(.lvl_warning):not(.lvl_notice):not(.lvl_info):not(.lvl_debug) td:not(:first-of-type) {
	display: none;
}

/* Fix the width of everything but the message  */
#syslogTable th, #syslogTable td {
	width: 0px;
}
#syslogTable td:first-of-type,
#syslogTable th:last-of-type,
#syslogTable td:last-of-type {
	width: auto;
	overflow: scroll;
}

/* Toggle columns */
#syslogTable:not(.facility) th:nth-of-type(2),
#syslogTable:not(.facility) td:nth-of-type(2) {
	display: none;
}
#syslogTable:not(.hostname) th:nth-of-type(4),
#syslogTable:not(.hostname) td:nth-of-type(4) {
	display: none;
}

/* Row priority colours */
#syslogTable tr.lvl_emerg {
	background-color: black;
}
#syslogTable tr.lvl_alert {
	background-color: maroon;
}
#syslogTable tr.lvl_crit {
	background-color: crimson;
}
#syslogTable tr.lvl_err {
	background-color: darkorange;
}
#syslogTable tr.lvl_warning {
	background-color: goldenrod;
}
#syslogTable tr.lvl_notice {
	background-color: midnightblue;
}
#syslogTable tr.lvl_info {
	background-color: steelblue;
}
#syslogTable tr.lvl_debug {
	background-color: slategray;
}

/* Priority filtering */
#syslogTable.filter_emerg tr.lvl_alert,
#syslogTable.filter_emerg tr.lvl_crit,
#syslogTable.filter_emerg tr.lvl_err,
#syslogTable.filter_emerg tr.lvl_warning,
#syslogTable.filter_emerg tr.lvl_notice,
#syslogTable.filter_emerg tr.lvl_info,
#syslogTable.filter_emerg tr.lvl_debug {
	display: none;
}

#syslogTable.filter_alert tr.lvl_crit,
#syslogTable.filter_alert tr.lvl_err,
#syslogTable.filter_alert tr.lvl_warning,
#syslogTable.filter_alert tr.lvl_notice,
#syslogTable.filter_alert tr.lvl_info,
#syslogTable.filter_alert tr.lvl_debug {
	display: none;
}

#syslogTable.filter_crit tr.lvl_err,
#syslogTable.filter_crit tr.lvl_warning,
#syslogTable.filter_crit tr.lvl_notice,
#syslogTable.filter_crit tr.lvl_info,
#syslogTable.filter_crit tr.lvl_debug {
	display: none;
}

#syslogTable.filter_err tr.lvl_warning,
#syslogTable.filter_err tr.lvl_notice,
#syslogTable.filter_err tr.lvl_info,
#syslogTable.filter_err tr.lvl_debug {
	display: none;
}

#syslogTable.filter_warning tr.lvl_notice,
#syslogTable.filter_warning tr.lvl_info,
#syslogTable.filter_warning tr.lvl_debug {
	display: none;
}

#syslogTable.filter_notice tr.lvl_info,
#syslogTable.filter_notice tr.lvl_debug {
	display: none;
}

#syslogTable.filter_info tr.lvl_debug {
	display: none;
}

/* Severity selector */
#severityContainer {
	display: inline-block;
	padding-left: 10px;
}

label[for="severity"] {
    padding-left: 5px;
}

